--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ License: https://freebootstrap.net/license
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TekAlgo | App Development</title>
+    <title>ApplicationAlgo | App Development</title>
 
     <!-- ======= Google Font =======-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -56,19 +56,22 @@ License: https://freebootstrap.net/license
           class="container d-flex align-items-center justify-content-between"
         >
           <!-- Start Logo-->
-          <a class="navbar-brand w-auto" href="index.html">
+          <a class="navbar-brand w-auto" href="#">
             <!-- If you use a text logo, uncomment this if it is commented-->
             <!-- Vertex-->
 
             <!-- If you plan to use an image logo, uncomment this if it is commented-->
 
-            <!-- logo dark--><img
+            <!-- logo dark-->
+            <img
               class="logo dark"
               src="https://tekalgo.com/aman_assets/images/logos/tekAlgo_logo_in_black.png"
               alt="FreeBootstrap.net image placeholder"
             />
 
-            <!-- logo light--><img
+            <!-- logo light-->
+
+            <img
               class="logo light"
               src="https://tekalgo.com/aman_assets/images/logos/tekAlgo_logo_in_black.png"
               alt="FreeBootstrap.net image placeholder"
@@ -90,21 +93,21 @@ License: https://freebootstrap.net/license
                 <!-- h5#fbs__net-navbarsLabel.offcanvas-title Vertex-->
 
                 <!-- If you plan to use an image logo, uncomment this if it is commented-->
-                <a
-                  class="logo-link"
-                  id="fbs__net-navbarsLabel"
-                  href="index.html"
-                >
-                  <!-- logo dark--><img
+                <a class="logo-link" id="fbs__net-navbarsLabel" href="#">
+                  <!-- logo dark-->
+                  <img
                     class="logo dark"
                     src="https://tekalgo.com/aman_assets/images/logos/tekAlgo_logo_in_black.png"
-                    alt="FreeBootstrap.net image placeholder" />
+                    alt="FreeBootstrap.net image placeholder"
+                  />
 
-                  <!-- logo light--><img
+                  <!-- logo light-->
+                  <img
                     class="logo light"
                     src="https://tekalgo.com/aman_assets/images/logos/tekAlgo_logo_in_black.png"
                     alt="FreeBootstrap.net image placeholder"
-                /></a>
+                  />
+                </a>
               </div>
               <button
                 class="btn-close btn-close-black"
@@ -145,7 +148,8 @@ License: https://freebootstrap.net/license
                       data-aos="fade-up"
                       data-aos-delay="100"
                     >
-                      Unlock Smarter Operations with TekAlgo App Solutions
+                      Unlock Smarter Operations with ApplicationAlgo App
+                      Solutions
                     </h1>
                     <p
                       class="hero-description mb-4 mb-lg-5"
@@ -228,7 +232,7 @@ License: https://freebootstrap.net/license
                       class="subtitle text-uppercase mb-3"
                       data-aos="fade-up"
                       data-aos-delay="0"
-                      >About TekAlgo</span
+                      >About ApplicationAlgo</span
                     >
                     <h2 class="mb-4" data-aos="fade-up" data-aos-delay="100">
                       Revolutionizing Business Operations with Secure, Scalable
@@ -236,10 +240,10 @@ License: https://freebootstrap.net/license
                     </h2>
                     <div data-aos="fade-up" data-aos-delay="200">
                       <p>
-                        At TekAlgo, we are committed to transforming business
-                        landscapes by providing innovative, secure, and scalable
-                        solutions. Our platform empowers organizations to
-                        streamline operations, automate workflows, and gain
+                        At ApplicationAlgo, we are committed to transforming
+                        business landscapes by providing innovative, secure, and
+                        scalable solutions. Our platform empowers organizations
+                        to streamline operations, automate workflows, and gain
                         real-time insights to drive smarter decision-making.
                       </p>
                       <p>
@@ -351,7 +355,7 @@ License: https://freebootstrap.net/license
                                 Empowering Your Digital Experience
                               </h2>
                               <p class="mb-5">
-                                At TekAlgo, we’re focused on providing a
+                                At ApplicationAlgo, we’re focused on providing a
                                 platform that empowers users to navigate and
                                 optimize their digital world with ease and
                                 security. Our seamless approach ensures a
@@ -1065,8 +1069,8 @@ License: https://freebootstrap.net/license
                   What Our Clients Say About Us
                 </h2>
                 <p data-aos="fade-up" data-aos-delay="200">
-                  Hear how TekAlgo is transforming digital experiences for
-                  businesses and developers alike.
+                  Hear how ApplicationAlgo is transforming digital experiences
+                  for businesses and developers alike.
                 </p>
               </div>
             </div>
@@ -1080,7 +1084,8 @@ License: https://freebootstrap.net/license
                   <blockquote class="mb-3">
                     &ldquo; The UI/UX is clean, intuitive, and fast. My team
                     onboarded within hours and we’ve reduced project turnaround
-                    time significantly since switching to TekAlgo. &rdquo;
+                    time significantly since switching to ApplicationAlgo.
+                    &rdquo;
                   </blockquote>
                   <div
                     class="testimonial-author d-flex gap-3 align-items-center"
@@ -1107,8 +1112,8 @@ License: https://freebootstrap.net/license
                 <div class="testimonial rounded-4 p-4">
                   <blockquote class="mb-3">
                     &ldquo; As a solo developer, I value platforms that save
-                    time. TekAlgo web tools streamline my workflow and help me
-                    deliver faster. &rdquo;
+                    time. ApplicationAlgo web tools streamline my workflow and
+                    help me deliver faster. &rdquo;
                   </blockquote>
                   <div
                     class="testimonial-author d-flex gap-3 align-items-center"
@@ -1192,8 +1197,8 @@ License: https://freebootstrap.net/license
                 <div class="testimonial rounded-4 p-4">
                   <blockquote class="mb-3">
                     &ldquo; Security and scalability are top priorities for us,
-                    and TekAlgo delivers on both fronts without compromise.
-                    &rdquo;
+                    and ApplicationAlgo delivers on both fronts without
+                    compromise. &rdquo;
                   </blockquote>
                   <div
                     class="testimonial-author d-flex gap-3 align-items-center"
@@ -1265,8 +1270,8 @@ License: https://freebootstrap.net/license
                   Frequently Asked Questions
                 </h2>
                 <p data-aos="fade-up" data-aos-delay="100">
-                  At TekAlgo, we understand you might have questions. Here
-                  you'll find answers that help you better understand our
+                  At ApplicationAlgo, we understand you might have questions.
+                  Here you'll find answers that help you better understand our
                   services, process, and how we bring your ideas to life with
                   innovative solutions.
                 </p>
@@ -1680,7 +1685,7 @@ License: https://freebootstrap.net/license
                 =>>> Buy the pro version, which includes a functional PHP/AJAX contact form and many additional features.: https://freebootstrap.net/template/vertex-pro-bootstrap-website-template-for-portfolio/ <<<=
                 -->
 
-                © 2024 All Rights Reserved by TekAlgo Technologies
+                © 2024 All Rights Reserved by ApplicationAlgo Technologies
               </div>
               <!-- <div
                 class="col-xl-4 justify-content-start justify-content-xl-end quick-links d-flex flex-column flex-xl-row text-center text-xl-start gap-3"
