--- a/index.html
+++ b/index.html
@@ -1685,7 +1685,7 @@ License: https://freebootstrap.net/license
                 =>>> Buy the pro version, which includes a functional PHP/AJAX contact form and many additional features.: https://freebootstrap.net/template/vertex-pro-bootstrap-website-template-for-portfolio/ <<<=
                 -->
 
-                © 2024 All Rights Reserved by ApplicationAlgo Technologies
+                © 2024 All Rights Reserved by ApplicationAlgo
               </div>
               <!-- <div
                 class="col-xl-4 justify-content-start justify-content-xl-end quick-links d-flex flex-column flex-xl-row text-center text-xl-start gap-3"
